--- a/css/mobile.css
+++ b/css/mobile.css
@@ -36,7 +36,7 @@ main {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    font-size: 3em;
+    font-size: 2.5em;
     font-weight: bold;
 }
 nav {
@@ -60,4 +60,45 @@ nav {
 .actived-nav {
     color: #0065FC !important;
     border-bottom: solid #0065FC 0.5rem !important;
+}
+main > h4 {
+    font-size: 1em;
+}
+form {
+    margin-top: 5em;
+    margin-bottom: 5em;
+    width: 100%;
+}
+form div.bg-grey {
+    height: 6.4rem;
+    width: 6.4rem;
+    font-size: 2.5em;
+    border-radius: 30px 0 0 30px;
+}
+#location {
+    font-size: 2.5em;
+    height: 6rem;
+    width: 60%;
+    padding-top: auto;
+    padding-bottom: auto;
+    padding-left: 1em;
+    font-family: Raleway;
+    border: solid #F2F2F2 0.2rem;
+    margin-right: -2rem;
+}
+button[type="submit"] {
+    height: 6.4rem;
+    width: 6.4rem;
+    border: none;
+    border-radius: 30px;
+}
+.fas.fa-search {
+    color: white;
+    font-size: 2.5em;
+}
+ul > li > div {
+    margin-left: -0.5rem;
+}
+ul {
+    padding-left: 0;
 }
