--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,7 +5,7 @@
     margin-right: auto;
     margin-left: auto;
 }
-header {
+#nav-header {
     background-color: white;
     display: flex;
     flex-wrap: wrap;
@@ -17,10 +17,8 @@ header {
     z-index: 1000;
 }
 main {
-    position: fixed;
     overflow: scroll;
-    height: 80%;
-    width: 90vw;
+    height: 100%;
 }
 #logo {
     background-image: url("../image/Reservia.svg");
@@ -61,23 +59,23 @@ nav {
     color: #0065FC !important;
     border-bottom: solid #0065FC 0.5rem !important;
 }
-main > h4 {
-    font-size: 1em;
+main > h2 {
+    margin-top: -0.3em;
 }
 form {
-    margin-top: 5em;
-    margin-bottom: 5em;
+    margin-top: 4em;
+    margin-bottom: 2em;
     width: 100%;
 }
 form div.bg-grey {
-    height: 6.4rem;
-    width: 6.4rem;
-    font-size: 2.5em;
+    height: 8.4rem;
+    width: 8.4rem;
+    font-size: 3em;
     border-radius: 30px 0 0 30px;
 }
 #location {
-    font-size: 2.5em;
-    height: 6rem;
+    font-size: 3em;
+    height: 8rem;
     width: 60%;
     padding-top: auto;
     padding-bottom: auto;
@@ -85,10 +83,11 @@ form div.bg-grey {
     font-family: Raleway;
     border: solid #F2F2F2 0.2rem;
     margin-right: -2rem;
+    flex-grow: 1;
 }
 button[type="submit"] {
-    height: 6.4rem;
-    width: 6.4rem;
+    height: 8.4rem;
+    width: 8.4rem;
     border: none;
     border-radius: 30px;
 }
@@ -101,4 +100,63 @@ ul > li > div {
 }
 ul {
     padding-left: 0;
+}
+/* LODGING ASIDE */
+#lodging-aside {
+    order: 1;
+    margin-top: 2em;
+    padding-top: 3em;
+    padding-bottom: 5em;
+}
+#lodging-aside section {
+    background-color: white;
+    height: 22rem;
+    border-radius: 3rem;
+    padding: 0.6em 0.6em;
+    margin-top: 2em;
+    -webkit-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+    -moz-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+    box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+}
+#lodging-aside section img {
+    width: 40%;
+    object-fit: cover;
+    border-radius: 3rem 0 0 3rem;
+}
+#lodging-aside section div {
+    padding-top: 1.5rem;
+    padding-left: 3rem;
+    padding-right: 5rem;
+}
+/* ************* */
+
+/* LODGING ARTICLE */
+#lodging-article {
+    order: 2;
+    padding-top: 3em;
+}
+#lodging-article section {
+    background-color: white;
+    height: 30rem;
+    border-radius: 3rem;
+    padding: 0.6em 0.6em;
+    margin-top: 2em;
+    -webkit-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+    -moz-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+    box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+}
+#lodging-article section img {
+    width: 100%;
+    height: 60%;
+    object-fit: cover;
+    border-radius: 3rem 3rem 0 0;
+}
+#lodging-article section div {
+    padding-top: 1rem;
+    padding-left: 3rem;
+    padding-right: 5rem;
+}
+/* *************** */
+#activities {
+    order: 3;
 }
