--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 .text-blue {color: #0065FC;}
 .text-blue-light {color: #DEEBFF;}
-.text-grey {color: #D9D9D9;}
+.text-grey {color: #a0a0a0;}
+.text-grey-light {color: #F2F2F2;}
 .text-white {color: white;}
+.text-black {color: black;}
 .bg-grey {background-color: #F2F2F2;}
 .bg-blue {background-color: #0065FC;}
 .bg-blue-light {background-color: #DEEBFF;}
@@ -18,42 +20,59 @@ a {text-decoration: none;}
     display: flex;
     flex-direction: column;
 }
+.flex-space-between {justify-content: space-between;}
 .flex-wrap {flex-wrap: wrap;}
+.flex-grow {flex-grow: 1;}
+.self-end {
+    align-self: flex-end;
+}
 .centerall {
     align-content: center;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
-.px-3 {
-    padding-left: 3rem;
-    padding-right: 3rem;
+.center-x {
+    justify-content: center
 }
 li > a {color: inherit; text-align: center;}
-.title {font-size: 3.5em;}
+.title {font-size: 3.5rem;}
+.fontsize-3 {font-size: 3em;}
 .fontsize-2-5 {font-size: 2.5em;}
+.fontsize-2 {font-size: 2em;}
+.fontsize-1-5 {font-size: 1.5em;}
+.fontsize-1 {font-size: 1em;}
 .disc {
     border-radius: 90px;
-    height: 6.4rem;
-    width: 6.4rem;
+    height: 8rem;
+    width: 8rem;
     margin-right: -6rem;
-    z-index: 1000;
+    z-index: 500;
 }
 .filter {
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;;
 }
 .filter p {
-    height: 6rem;
+    height: 7.2rem;
     border-radius: 90px;
-    border: #D9D9D9 0.2rem solid;
-    padding-right: 2rem;
-    padding-left: 7rem;
+    border: #D9D9D9 0.4rem solid;
+    padding-right: 3rem;
+    padding-left: 8rem;
+}
+.info-icon {
+    border-radius: 90px;
+    font-size: 4rem;
     margin-right: 2rem;
 }
-.m1 {
-    margin: rem 1rem 1rem 1rem;
+.info-text {
+    margin-top: 1.4rem;
 }
-.test {
-    border-radius: 90px;
+.my-1 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+.my-6 {
+    margin-top: 6rem;
+    margin-bottom: 6rem;
 }
