--- a/css/mobile.css
+++ b/css/mobile.css
@@ -159,4 +159,23 @@ ul {
 /* *************** */
 #activities {
     order: 3;
+    padding-bottom: 8rem;
+}
+#activities section {
+    background-color: white;
+    height: 30rem;
+    border-radius: 3rem;
+    margin-top: 2em;
+    -webkit-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+    -moz-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+    box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+}
+#activities section img {
+    width: 100%;
+    height: 70%;
+    object-fit: cover;
+    border-radius: 3rem 3rem 0 0;
+}
+#activities section h3 {
+    margin-left: 3rem;
 }
