--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,10 @@ li > a {color: inherit; text-align: center;}
     margin-top: 6rem;
     margin-bottom: 6rem;
 }
+.py-3 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+.pl-2 {
+    padding-left: 2rem;
+}
