--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,17 +1,5 @@
-.container {
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
+/* HEADER */
 #nav-header {
-    background-color: white;
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    min-height: 100px;
-    justify-content: space-between;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -29,29 +17,14 @@ main {
     height: 8em;
 }
 #subscribe {
-    padding-right: 1.5em;
     width: 50%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    font-size: 2.5em;
-    font-weight: bold;
 }
 nav {
     width: 100%;
     padding-top: 1em;
 }
-#main_nav {
-    display: flex;
-    font-size: 2.5em;
-    padding: 0;
-}
-
-#main_nav > li {
+#main_nav li {
     width: 50%;
-    display: flex;
-    justify-content: center;
-    color: #1D1D1D;
     border-bottom: solid #F2F2F2 0.5rem;
     padding-bottom: 0.8em;
 }
@@ -59,6 +32,9 @@ nav {
     color: #0065FC !important;
     border-bottom: solid #0065FC 0.5rem !important;
 }
+/* ****** */
+
+
 main > h2 {
     margin-top: -0.3em;
 }
@@ -70,20 +46,14 @@ form {
 form div.bg-grey {
     height: 8.4rem;
     width: 8.4rem;
-    font-size: 3em;
     border-radius: 30px 0 0 30px;
 }
 #location {
-    font-size: 3em;
     height: 8rem;
     width: 60%;
-    padding-top: auto;
-    padding-bottom: auto;
     padding-left: 1em;
-    font-family: Raleway;
     border: solid #F2F2F2 0.2rem;
     margin-right: -2rem;
-    flex-grow: 1;
 }
 button[type="submit"] {
     height: 8.4rem;
@@ -91,16 +61,39 @@ button[type="submit"] {
     border: none;
     border-radius: 30px;
 }
-.fas.fa-search {
-    color: white;
-    font-size: 2.5em;
-}
 ul > li > div {
     margin-left: -0.5rem;
 }
 ul {
     padding-left: 0;
 }
+.info-icon {
+    border-radius: 90px;
+    margin-right: 1.5rem;
+    border: 5px red;
+}
+.disc {
+    border-radius: 90px;
+    height: 8rem;
+    width: 8rem;
+    margin-right: -6rem;
+    z-index: 500;
+}
+.filter {
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;;
+}
+.filter p {
+    height: 7.2rem;
+    border-radius: 90px;
+    border: #D9D9D9 0.4rem solid;
+    padding-left: 8rem;
+}
+.info-text {
+    margin-top: 1.4rem;
+}
+
+
 /* LODGING ASIDE */
 #lodging-aside {
     order: 1;
@@ -130,6 +123,7 @@ ul {
 }
 /* ************* */
 
+
 /* LODGING ARTICLE */
 #lodging-article {
     order: 2;
@@ -157,15 +151,21 @@ ul {
     padding-right: 5rem;
 }
 /* *************** */
+
+
+/* ACTIVITIES */
 #activities {
     order: 3;
     padding-bottom: 8rem;
+}
+#activities h2 {
+    margin-bottom: 2em;
 }
 #activities section {
     background-color: white;
     height: 30rem;
     border-radius: 3rem;
-    margin-top: 2em;
+    margin-top: 3em;
     -webkit-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
     -moz-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
     box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
@@ -178,4 +178,18 @@ ul {
 }
 #activities section h3 {
     margin-left: 3rem;
+    margin-top: 3rem;
 }
+/* ********** */
+
+
+/* FIX ANCRE PROBLEME WITH STICKY NAV */
+main:target {
+    padding-top: 30em;
+    margin-top: -30em;
+}
+article:target {
+    padding-top: 18em;
+    margin-top: -18em;
+}
+/* *************** */
