--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,195 +1,199 @@
-/* HEADER */
-#nav-header {
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-}
-main {
-    overflow: scroll;
-    height: 100%;
-}
-#logo {
-    background-image: url("../image/Reservia.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 35%;
-    height: 8em;
-}
-#subscribe {
-    width: 50%;
-}
-nav {
-    width: 100%;
-    padding-top: 1em;
-}
-#main_nav li {
-    width: 50%;
-    border-bottom: solid #F2F2F2 0.5rem;
-    padding-bottom: 0.8em;
-}
-.actived-nav {
-    color: #0065FC !important;
-    border-bottom: solid #0065FC 0.5rem !important;
-}
-/* ****** */
+@media screen and (max-width: 1024px) {
+
+    /* HEADER */
+    #nav-header {
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+    }
+    main {
+        overflow: scroll;
+        height: 100%;
+    }
+    #logo {
+        background-image: url("../image/Reservia.svg");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 35%;
+        height: 8em;
+    }
+    #subscribe {
+        width: 50%;
+    }
+    #nav-header nav {
+        width: 100%;
+        padding-top: 1em;
+    }
+    #main-nav li {
+        width: 50%;
+        border-bottom: solid #F2F2F2 0.5rem;
+        padding-bottom: 0.8em;
+    }
+    .actived-nav {
+        color: #0065FC !important;
+        border-bottom: solid #0065FC 0.5rem !important;
+    }
+    /* ****** */
 
 
-main > h2 {
-    margin-top: -0.3em;
-}
-form {
-    margin-top: 4em;
-    margin-bottom: 2em;
-    width: 100%;
-}
-form div.bg-grey {
-    height: 8.4rem;
-    width: 8.4rem;
-    border-radius: 30px 0 0 30px;
-}
-#location {
-    height: 8rem;
-    width: 60%;
-    padding-left: 1em;
-    border: solid #F2F2F2 0.2rem;
-    margin-right: -2rem;
-}
-button[type="submit"] {
-    height: 8.4rem;
-    width: 8.4rem;
-    border: none;
-    border-radius: 30px;
-}
-ul > li > div {
-    margin-left: -0.5rem;
-}
-ul {
-    padding-left: 0;
-}
-.info-icon {
-    border-radius: 90px;
-    margin-right: 1.5rem;
-    border: 5px red;
-}
-.disc {
-    border-radius: 90px;
-    height: 8rem;
-    width: 8rem;
-    margin-right: -6rem;
-    z-index: 500;
-}
-.filter {
-    margin-bottom: 0.5rem;
-    margin-top: 0.5rem;;
-}
-.filter p {
-    height: 7.2rem;
-    border-radius: 90px;
-    border: #D9D9D9 0.4rem solid;
-    padding-left: 8rem;
-}
-.info-text {
-    margin-top: 1.4rem;
-}
+    main > h2 {
+        margin-top: -0.3em;
+    }
+    form {
+        margin-top: 4em;
+        margin-bottom: 2em;
+        width: 100%;
+    }
+    form div.bg-grey {
+        height: 8.3rem;
+        width: 8.4rem;
+        border-radius: 30px 0 0 30px;
+    }
+    #location {
+        height: 7.8rem;
+        width: 60%;
+        padding-left: 1em;
+        border: solid #F2F2F2 0.2rem;
+        margin-right: -2rem;
+    }
+    button[type="submit"] {
+        height: 8.4rem;
+        width: 8.4rem;
+        border: none;
+        border-radius: 30px;
+    }
+    ul > li > div {
+        margin-left: -0.5rem;
+    }
+    ul {
+        padding-left: 0;
+    }
+    .info-icon {
+        border-radius: 90px;
+        margin-right: 1.5rem;
+        border: 5px red;
+    }
+    .disc {
+        border-radius: 90px;
+        height: 8rem;
+        width: 8rem;
+        margin-right: -8rem;
+        z-index: 500;
+    }
+    .filter {
+        margin-bottom: 0.5rem;
+        margin-top: 0.5rem;;
+    }
+    .filter p {
+        height: 7.2rem;
+        border-radius: 90px;
+        border: #D9D9D9 0.4rem solid;
+        padding-left: 8rem;
+    }
+    .info-text {
+        margin-top: 1.4rem;
+    }
 
 
-/* LODGING ASIDE */
-#lodging-aside {
-    order: 1;
-    margin-top: 2em;
-    padding-top: 3em;
-    padding-bottom: 5em;
-}
-#lodging-aside section {
-    background-color: white;
-    height: 22rem;
-    border-radius: 3rem;
-    padding: 0.6em 0.6em;
-    margin-top: 2em;
-    -webkit-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
-    -moz-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
-    box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
-}
-#lodging-aside section img {
-    width: 40%;
-    object-fit: cover;
-    border-radius: 3rem 0 0 3rem;
-}
-#lodging-aside section div {
-    padding-top: 1.5rem;
-    padding-left: 3rem;
-    padding-right: 5rem;
-}
-/* ************* */
+    /* LODGING ASIDE */
+    #lodging-aside {
+        order: 1;
+        margin-top: 2em;
+        padding-top: 3em;
+        padding-bottom: 5em;
+    }
+    #lodging-aside section {
+        background-color: white;
+        height: 22rem;
+        border-radius: 3rem;
+        padding: 0.6em 0.6em;
+        margin-top: 2em;
+        -webkit-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+        -moz-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+        box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+    }
+    #lodging-aside section img {
+        width: 40%;
+        object-fit: cover;
+        border-radius: 3rem 0 0 3rem;
+    }
+    #lodging-aside section div {
+        padding-top: 1.5rem;
+        padding-left: 3rem;
+        padding-right: 5rem;
+    }
+    /* ************* */
 
 
-/* LODGING ARTICLE */
-#lodging-article {
-    order: 2;
-    padding-top: 3em;
-}
-#lodging-article section {
-    background-color: white;
-    height: 30rem;
-    border-radius: 3rem;
-    padding: 0.6em 0.6em;
-    margin-top: 2em;
-    -webkit-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
-    -moz-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
-    box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
-}
-#lodging-article section img {
-    width: 100%;
-    height: 60%;
-    object-fit: cover;
-    border-radius: 3rem 3rem 0 0;
-}
-#lodging-article section div {
-    padding-top: 1rem;
-    padding-left: 3rem;
-    padding-right: 5rem;
-}
-/* *************** */
+    /* LODGING ARTICLE */
+    #lodging-article {
+        order: 2;
+        padding-top: 3em;
+    }
+    #lodging-article section {
+        background-color: white;
+        height: 30rem;
+        border-radius: 3rem;
+        padding: 0.6em 0.6em;
+        margin-top: 2em;
+        -webkit-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+        -moz-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+        box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+    }
+    #lodging-article section img {
+        width: 100%;
+        height: 60%;
+        object-fit: cover;
+        border-radius: 3rem 3rem 0 0;
+    }
+    #lodging-article section div {
+        padding-top: 1rem;
+        padding-left: 3rem;
+        padding-right: 5rem;
+    }
+    /* *************** */
 
 
-/* ACTIVITIES */
-#activities {
-    order: 3;
-    padding-bottom: 8rem;
-}
-#activities h2 {
-    margin-bottom: 2em;
-}
-#activities section {
-    background-color: white;
-    height: 30rem;
-    border-radius: 3rem;
-    margin-top: 3em;
-    -webkit-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
-    -moz-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
-    box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
-}
-#activities section img {
-    width: 100%;
-    height: 70%;
-    object-fit: cover;
-    border-radius: 3rem 3rem 0 0;
-}
-#activities section h3 {
-    margin-left: 3rem;
-    margin-top: 3rem;
-}
-/* ********** */
+    /* ACTIVITIES */
+    #activities {
+        order: 3;
+        padding-bottom: 8rem;
+    }
+    #activities h2 {
+        margin-bottom: 2em;
+    }
+    #activities section {
+        background-color: white;
+        height: 30rem;
+        border-radius: 3rem;
+        margin-top: 3em;
+        -webkit-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+        -moz-box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+        box-shadow: 0px 0px 1.5em 0 rgba(0,0,0,0.10);
+    }
+    #activities section img {
+        width: 100%;
+        height: 70%;
+        object-fit: cover;
+        border-radius: 3rem 3rem 0 0;
+    }
+    #activities section h3 {
+        margin-left: 3rem;
+        margin-top: 3rem;
+    }
+    /* ********** */
 
 
-/* FIX ANCRE PROBLEME WITH STICKY NAV */
-main:target {
-    padding-top: 30em;
-    margin-top: -30em;
+    /* FIX ANCRE PROBLEME WITH STICKY NAV */
+    main:target {
+        padding-top: 30em;
+        margin-top: -30em;
+    }
+    article:target {
+        padding-top: 18em;
+        margin-top: -18em;
+    }
+    /* *************** */
+
 }
-article:target {
-    padding-top: 18em;
-    margin-top: -18em;
-}
-/* *************** */
