--- a/css/desktop.css
+++ b/css/desktop.css
@@ -20,7 +20,7 @@
     
     #nav-header {
         margin: 0 0 0 0;
-        font-size: 0.5em!important;
+        font-size: 0.4em!important;
         justify-content: flex-start!important;
         width: 100%;
         
@@ -52,19 +52,101 @@
 
 
 
+    .fontsize-3-5 {
+        font-size: 1.5em!important;
+    }
+
+    .fontsize-1-5 {
+        font-size: 1em!important;
+    }
+    .fontsize-3 {
+        font-size: 1.4em!important;
+    }
 
 
 
+    form {
+        margin-top: 1.5em;
+        margin-bottom: 2em;
+        width: 27rem;
+    }
+    form div.bg-grey {
+        height: 2.9rem;
+        width: 2.9rem;
+        border-radius: 1rem 0 0 1rem;
+        font-size: 1rem!important;
+    }
+    #location {
+        height: 2.6rem;
+        width: 15rem;
+        padding-left: 1em;
+        border: solid #F2F2F2 0.1rem;
+        flex-grow: unset;
+        font-size: 1rem!important;
+    }
+    button[type="submit"] {
+        height: 2.9rem;
+        border: none;
+        border-radius: 0 1rem 1rem 0;
+    }
+    button[type="submit"] span {
+        font-family: Raleway;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+        font-size: 1rem!important;
+    }
+    button[type="submit"] i {
+        display: none;
+    }
 
 
 
+    .disc {
+        border-radius: 90px;
+        height: 3.1rem;
+        width: 3.1rem;
+        margin-right: -4.6rem;
+        z-index: 500;
+        font-size: 0.8rem!important;
+    }
+    .filter {
+        margin-bottom: 0.5rem;
+        margin-top: 0.5rem;;
+        margin-left: 1.5rem;
+    }
+    .filter-list {
+        justify-content: flex-start;
+        
+    }
+    .filter-list p {
+        width: auto;
+        align-self: center;
+        font-size: 1rem!important;
+    }
+    .filter p {
+        height: 2.8rem;
+        border-radius: 90px;
+        border: #D9D9D9 0.15rem solid;
+        padding-left: 4rem;
+        padding-right: 1.5rem;
+        font-size: 1.4rem;
+    }
+    ul {
+        padding-left: 0;
+    }
 
 
 
-
-
-
-
+    .info-icon {
+        border-radius: 90px;
+        margin-right: 0.8rem;
+        border: 5px red;
+    }
+    .info-text {
+        margin-top: 1.2rem;
+        font-size: 1rem;
+        font-weight: normal;
+    }
 
 
 
