--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,5 +1,16 @@
-@media screen and (min-width: 993px) {
+@media screen and (min-device-width: 480px) {
     
+    /* FONT SIZE */
+    .fontsize-0-8 {font-size: 0.8vw;}
+    .fontsize-0-9 {font-size: 0.9vw;}
+    .fontsize-1 {font-size: 1vw;}
+    .fontsize-1-1 {font-size: 1.1vw;}
+    .fontsize-1-2 {font-size: 1.2vw;}
+    .fontsize-1-3 {font-size: 1.3vw;}
+    .fontsize-1-4 {font-size: 1.4vw;}
+    .fontsize-1-5 {font-size: 1.5vw;}
+    /* ********* */
+
     BODY {
         padding-left: 1vw;
         padding-right: 1vw;
@@ -7,36 +18,17 @@
         margin-right: auto;
     }
 
+    /* LOCATION INPUT */
     #logo {
-        background-image: url("../image/Reservia.svg");
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
         width: 7vw;
         height: 6vw;
-        order: 1;
-        align-self: flex-end;
         margin-right: auto;
     }
-    
-    #nav-header {
-        margin: 0 0 0 0;
-        font-size: 0.5vw!important;
-        justify-content: flex-start!important;
-        width: 100%;
-    }
     #subscribe {
-        order: 3;
         padding-top: 1.5vw;
         padding-left: 1.5vw;
     }
-    #nav-header nav {
-        order: 2;
-    }
-    .actived-nav {
-        color: #0065FC !important;
-        border-top: solid #0065FC 0.1vw !important;
-    }
+    .actived-nav {border-top: solid #0065FC 0.1vw;}
     #main-nav{
         margin-block-start: 0!important;
         height: 100%;
@@ -46,79 +38,55 @@
         padding-left: 1.5vw;
         padding-right: 1.5vw;
     }
+    .m-display {display: none;}
+    /* ************** */
 
 
-
-    .fontsize-3-5 {
-        font-size: 1.5vw!important;
-    }
-
-    .fontsize-1-5 {
-        font-size: 1vw!important;
-    }
-    .fontsize-3 {
-        font-size: 1.2vw!important;
-    }
-
-
-
-    form {
+    /* LOCATION INPUT */
+    .location-input {
         margin-top: 1.5vw;
         margin-bottom: 2vw;
         width: 27vw;
     }
-    form div.bg-grey {
+    .location-input div.bg-grey {
         height: 2.9vw;
         width: 2.9vw;
         border-radius: 1vw 0 0 1vw;
-        font-size: 1rvw!important;
     }
-    #location {
+    .location-input #location {
         height: 2.6vw;
         width: 15vw;
         padding-left: 1vw;
-        border: solid #F2F2F2 0.1vw;
-        flex-grow: unset;
-        font-size: 1.3vw!important;
+        border-width: 0.1vw;
     }
-    button[type="submit"] {
+    .location-input button[type="submit"] {
         height: 2.9vw;
         border: none;
         border-radius: 0 1vw 1vw 0;
     }
-    button[type="submit"] span {
+    .location-input button[type="submit"] span {
         font-family: Raleway;
         padding-left: 0.5vw;
         padding-right: 0.5vw;
-        font-size: 1vw!important;
     }
-    button[type="submit"] i {
-        display: none;
-    }
+    /* *************** */
 
-
-
+    /* FILTERS */
     .disc {
         border-radius: 90px;
         height: 3.1vw;
         width: 3.1vw;
         margin-right: -4.6vw;
         z-index: 500;
-        font-size: 0.8vw!important;
     }
     .filter {
         margin-bottom: 0.5vw;
         margin-top: 0.5vw;;
         margin-left: 1.5vw;
     }
-    .filter-list {
-        justify-content: flex-start;
-        
-    }
-    .filter-list p {
+    .filter-list > li {
         width: auto;
         align-self: center;
-        font-size: 1vw!important;
     }
     .filter p {
         height: 2.8vw;
@@ -126,27 +94,14 @@
         border: #D9D9D9 0.15vw solid;
         padding-left: 4vw;
         padding-right: 1.5vw;
-        font-size: 1.4vw;
     }
-    ul {
-        padding-left: 0;
-    }
+    /* ******* */
 
     .info-icon {
         border-radius: 90px;
         margin-right: 0.8vw;
     }
-    .info-text {
-        font-size: 1vw;
-        font-weight: normal;
-        text-align: center;
-    }
-
-
-
-
-
-
+    .info-text {text-align: center;}
 
 
     /* LODGING ARTICLE */
@@ -159,19 +114,10 @@
         padding-right: 2.5vw;
         padding-bottom: 2.6vw;
     }
-    #lodging-article h1 {
-        margin-bottom: 0;
-    }
+    #lodging-article h2 {margin-bottom: 0;}
     #lodging-article > p{
-        font-size: 0.6vw;
         margin: 0;
         margin-top: 2.6vw;
-
-    }
-    #lodging-article > div {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
     }
     #lodging-article section {
         background-color: white;
@@ -180,9 +126,6 @@
         border-radius: 1.5vw;
         padding: 0.3vw 0.3vw;
         margin-top: 2vw;
-        -webkit-box-shadow: 0px 0px 1.5vw 0 rgba(0,0,0,0.10);
-        -moz-box-shadow: 0px 0px 1.5vw 0 rgba(0,0,0,0.10);
-        box-shadow: 0px 0px 1.5vw 0 rgba(0,0,0,0.10);
     }
     #lodging-article section img {
         width: 100%;
@@ -191,19 +134,15 @@
         border-radius: 1.5vw 1.5vw 0 0;
     }
     #lodging-article section div {
-        font-size: 0.45vw;
         padding-left: 1vw;
         padding-top: 1vw;
-
     }
 
     #lodging-article section div * {
         margin-top: 0;
         margin-bottom: 0;
     }
-    #lodging-article section div p {
-        margin-top: 0.2vw;
-    }
+    #lodging-article section div p {margin-top: 0.2vw;}
     
     /* *************** */
 
@@ -222,27 +161,17 @@
         border-radius: 1.5vw;
         padding: 0.3vw 0.3vw;
         margin-top: 2vw;
-        -webkit-box-shadow: 0px 0px 1.5vw 0 rgba(0,0,0,0.10);
-        -moz-box-shadow: 0px 0px 1.5vw 0 rgba(0,0,0,0.10);
-        box-shadow: 0px 0px 1.5vw 0 rgba(0,0,0,0.10);
     }
     #lodging-aside section img {
         width: 40%;
         object-fit: cover;
         border-radius: 1.5vw 0 0 1.5vw;
     }
-    #lodging-aside section div {
-        font-size: 0.45vw;
-        padding-left: 1vw;
-        flex-direction: column;
-    }
+    #lodging-aside section div {padding-left: 1vw;}
 
     #lodging-aside section div * {
         margin-top: 0.5vw;
         margin-bottom: 0;
-    }
-    #lodging-aside section div p {
-        align-self: flex-start;
     }
     /* ************* */
 
@@ -251,23 +180,13 @@
         padding-top: 3vw;
         padding-bottom: 2.6vw;
     }
-    #activities h2 {
-        margin-bottom: 0;
-    }
-    #activities > div {
-        height: 34vw;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-    }
+    #activities h2 {margin-bottom: 0;}
+    #activities > div {height: 34vw;}
     #activities section {
         background-color: white;
         width: 21.3vw;
         border-radius: 1.5vw;
         margin-top: 2vw;
-        -webkit-box-shadow: 0px 0px 1.5vw 0 rgba(0,0,0,0.10);
-        -moz-box-shadow: 0px 0px 1.5vw 0 rgba(0,0,0,0.10);
-        box-shadow: 0px 0px 1.5vw 0 rgba(0,0,0,0.10);
     }
     #activities section img {
         width: 100%;
@@ -275,43 +194,30 @@
         border-radius: 1.5vw 1.5vw 0 0;
     }
     #activities section h3 {
-        font-size: 1.1vw;
         padding-left: 1.5vw;
         max-height: 2vw;
 
     }
-    .img-big {
-        height: 25.5vw;
-    }
-    .img-medium {
-        height: 13vw;
-    }
-    .img-small {
-        height: 7vw;
-    }
+    /* *********** */
 
-    footer {
-        padding:3vw 0 3vw 3vw!important ;
-    }
-    footer > div {
-        flex-direction: row!important;
-        justify-content: space-between;
-        width: 80%;
-    }
+    /* FOOTER */
+    footer {padding:3vw 0 3vw 3vw!important ;}
+    footer > div {width: 80%;}
     footer h3 {
         font-size: 1.5vw;
         margin-top: 0;
         margin-bottom: 0.8vw;
     }
-    footer a {
-        font-size: 1vw;
-        margin: 0!important;
-    }
+    footer a {margin: 0!important;}
     footer ul {
         margin-top: 0;
         margin-bottom: 0;
     }
-    footer ul li {
-        line-height: 1.3vw;
-    }
+    /* ****** */
+
+    /* IMAGE SIZE */
+    .img-big {height: 25.5vw;}
+    .img-medium {height: 13vw;}
+    .img-small {height: 7vw;}
+    /* ********** */
 }
