--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-li {list-style: none;}
-a {text-decoration: none;}
-li > a {color: inherit; text-align: center;}
 
 /* ******************************************************** */
 /*                          FLEX BOX                        */
@@ -11,8 +8,6 @@ li > a {color: inherit; text-align: center;}
     display: flex;
     flex-direction: column;
 }
-
-.flex-space-between {justify-content: space-between;}
 
 .flex-wrap {flex-wrap: wrap;}
 
@@ -25,6 +20,7 @@ li > a {color: inherit; text-align: center;}
 .content-start {justify-content: flex-start;}
 .content-center {justify-content: center}
 .content-end{justify-content: flex-end;}
+.content-space-between {justify-content: space-between;}
 
 .centerall {
     align-content: center;
@@ -79,55 +75,42 @@ body {font-family: "Raleway";}
 .font-bold {font-weight: bold;}
 .font-normal {font-weight: normal;}
 
-.fontsize-1 {font-size: 1em;}
-.fontsize-1-5 {font-size: 1.5em;}
-.fontsize-2 {font-size: 2em;}
-.fontsize-2-5 {font-size: 2.5em;}
-.fontsize-3 {font-size: 3em;}
-.fontsize-3-5 {font-size: 3.5em;}
-
 /* ******************************************************** */
 /* ******************************************************** */
 
 
-/* ******************************************************** */
-/*                          PADDING                         */
-/* ******************************************************** */
-
-.py-3 {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+li {list-style: none;}
+a {
+    text-decoration: none;
+    color: inherit;
 }
-.pl-2 {padding-left: 2rem;}
-
-
-.pr-1-5 {padding-right: 1.5rem;}
-.pr-3 {padding-right: 3rem;}
-.pr-5 {padding-right: 5rem;}
-
-
-/* ******************************************************** */
-/* ******************************************************** */
-
-
-/* ******************************************************** */
-/*                          MARGIN                          */
-/* ******************************************************** */
-
-.my-1 {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-.my-6 {
-    margin-top: 6rem;
-    margin-bottom: 6rem;
+li > a {text-align: center;}
+::placeholder {
+    color: black;
+    opacity: 1; 
 }
 
+.pointer:hover {cursor: pointer;}
 
-/* ******************************************************** */
-/* ******************************************************** */
-
-
-.w100 {
-    width: 100%;
+#logo {
+    background-image: url("../image/Reservia.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
+.actived-nav {color: #0065FC !important;}
+
+.location-input #location {border: solid #F2F2F2;}
+
+.box-shadow {
+    -webkit-box-shadow: 0px 0px 1.5vw 0 rgba(0,0,0,0.10);
+    -moz-box-shadow: 0px 0px 1.5vw 0 rgba(0,0,0,0.10);
+    box-shadow: 0px 0px 1.5vw 0 rgba(0,0,0,0.10);
+}
+
+#subscribe {padding-right: 1.5rem;}
+
+.filter p {padding-right: 3rem;}
+
+ul {padding-left: 0;}
